# mc_rm

./: CMakeLists.txt  README.md  README.txt  main.cpp
linux-x86/include/: rm_base.h  rm_define.h
linux-x86/lib/: libRM_Base.so.1.0.0
